# abbyy-compiler

./: CMakeLists.txt  README.md
.github/workflows/: main.yml
src/minijava/: CMakeLists.txt  diagnostic.cpp  diagnostic.hpp  main.cpp  node-gen.py  utility.cpp  utility.hpp
src/minijava/ast/: ast-gen.py  ast-template.tpp  ast.hpp  ast.json  graphviz.cpp  graphviz.hpp
src/minijava/ir/: graphviz.cpp  graphviz.hpp  ir.hpp
src/minijava/parser/: lexer.l  parser.cpp  parser.hpp  parser.y  yyextra.hpp
src/minijava/runtime/: malloc.c  print.c
src/minijava/typecheck/: type.hpp  typecheck.cpp  typecheck.hpp
tests/: Expression.java
